# resume

./: .env.example  .gitignore  Ahmad_Jalil_CV.yaml  CV.yaml  README.md  VENV_SETUP.md  build-clean.py  build-resume  build-resume.bat  build.py  formatting.md  main.py  main.tex  pyproject.toml  requirements.txt  resume-variants.json  resume-variants.yaml
.github/workflows/: README.md  build-resumes.yml  render-from-caller.yml
ahmadstyle/: BulletEntry.j2.typ  CertificationsSkillsEntry.j2.typ  EducationEntry.j2.typ  ExperienceEntry.j2.typ  Header.j2.typ  NormalEntry.j2.typ  NumberedEntry.j2.typ  OneLineEntry.j2.typ  Preamble.j2.typ  PresentationEntry.j2.typ  ProfessionalDevelopmentEntry.j2.typ  PublicationEntry.j2.typ  README.md  ReversedNumberedEntry.j2.typ  SectionBeginning.j2.typ  SectionEnding.j2.typ  TextEntry.j2.typ  __init__.py
ahmadstyle/components/: date.j2.typ  date_formatter.j2.typ  unescape.j2.typ
ahmadstyle/entries/: BulletEntry.j2.typ  CertificationsEntry.j2.typ  CertificationsSkillsEntry.j2.typ  EducationEntry.j2.typ  ExperienceEntry.j2.typ  NormalEntry.j2.typ  NumberedEntry.j2.typ  OneLineEntry.j2.typ  PresentationEntry.j2.typ  ProfessionalDevelopmentEntry.j2.typ  SkillsEntry.j2.typ  (+3 more)
rendercv_output/: Ahmad_Jalil_CV.html  Ahmad_Jalil_CV.md  Ahmad_Jalil_CV.typ
resume_builder/: build-clean.py  build_clean.py  cli.py
tylerstyle/: EducationEntry.j2.typ  ExperienceEntry.j2.typ  Header.j2.typ  NormalEntry.j2.typ  OneLineEntry.j2.typ  Preamble.j2.typ  PublicationEntry.j2.typ  SectionBeginning.j2.typ  SectionEnding.j2.typ  TextEntry.j2.typ  __init__.py
(+13 files in other folders)
