[project]
name = "resume-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyrefly>=0.44.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rendercv[full]>=1.0.0",
    "ruff>=0.14.8",
]

[tool]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
